# the-dark-side-of-cpp

./: LICENSE  README.md
01-intro/: intro.txt  main.cpp  std_lib_facilities.h
02-Base-GuessProject/: README.md
02-basic-guess-project/: guess.cpp
03-basic-count-text/: CMakeLists.txt  main.cpp
03-basic-todo-list-project/: .gitignore  Readme.md  application_requirements.txt  main.cpp
04- qt-model-3d-viewer/: BaseModel.cpp  BaseModel.h  CustomSlider.h  Doxyfile  Model3DViewer.pro  gl_graph.pro  glwin.cpp  glwin.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelobj.cpp  modelobj.h  modelstl.cpp  modelstl.h  openglview.cpp  openglview.h  resources.qrc
04- qt-model-3d-viewer/Models/: Cube.mtl
04- qt-model-3d-viewer/Models/test/: monkey.mtl
04- qt-model-3d-viewer/documentation/html/: _base_model_8h_source.html  _custom_slider_8h_source.html  annotated.html  class_base_model-members.html  class_base_model.html  class_custom_slider-members.html  class_custom_slider.html  class_main_window-members.html  class_main_window.html  class_model_obj-members.html  class_model_obj.html  class_model_stl-members.html  class_model_stl.html  class_open_g_l_view-members.html  class_open_g_l_view.html  classes.html  (+17 more)
05 -basic-makefile/: Makefile  Readme.md
05 -basic-makefile/testMake/: Makefile
06-makefile-template/: Makefile
06-makefile-template/inc/: SampleClass.h
06-makefile-template/src/: SampleClass.cpp  main.cpp
07-cmake-makefile-template/: CMakeLists.txt  Makefile
07-cmake-makefile-template/src/: main.cpp
08-basic-start-direct-x/: main.cpp
(+50 files in other folders)
